--- a/web/appraisal/templates/appraisal/realestate_value.html
+++ b/web/appraisal/templates/appraisal/realestate_value.html
@@ -134,7 +134,7 @@
 
   <div id="valuationRealEstate" class="collapse show" aria-labelledby="heading">
     <div class="card-body" style="padding:0em;">
-      <table id="tableValuationRealEstate" class="table table-sm mb-0">
+      <table id="table_valuation_real_estate" class="table table-sm mb-0">
 
         <thead class="thead">
           <tr>
@@ -236,14 +236,14 @@
           <tr>
             <td></td>
             <td></td>
-            <td><input class="form-control form-control-sm form-control-inline" style="min-width:0;display:inline;"></input></td>
-            <td><input class="form-control form-control-sm"></input></td>
-            <td><input class="form-control form-control-sm"></input></td>
-            <td><input class="form-control form-control-sm"></input></td>
-            <td><input class="form-control form-control-sm"></input></td>
-            <td><input class="form-control form-control-sm"></input></td>
-            <td><input class="form-control form-control-sm"></input></td>
-            <td><input class="form-control form-control-sm"></input></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td style="padding:0em;text-align:right;">
@@ -1148,13 +1148,16 @@
       $("#in_value_safe").val('');
     }
     // Update valuation prince in rows of tables of current real estate
-    var builtSquareMeters  = {{realestate.house.builtSquareMeters}}
-    var totalSquareMeters  = {{realestate.total_area}}
-    var house = {{realestate.is_house}}
-    console.log(house)
     $(".td_cre_market_price").text(UFFormat(valorUF))
     if ({{realestate.is_house}}) {
+      var builtSquareMeters = {{realestate.house.builtSquareMeters|default:0}}
+      var totalSquareMeters = {{realestate.total_area}}
       $(".td_cre_market_price_per_built_square_meters").text(UFFormat(valorUF/builtSquareMeters))
+      $(".td_cre_market_price_per_total_square_meters").text(UFFormat(valorUF/totalSquareMeters))
+    } else if ({{realestate.is_apartment}}) {
+      var usefulSquareMeters = {{realestate.apartment.usefulSquareMeters|default:0}}
+      var totalSquareMeters = {{realestate.total_area}}
+      $(".td_cre_market_price_per_useful_square_meters").text(UFFormat(valorUF/usefulSquareMeters))
       $(".td_cre_market_price_per_total_square_meters").text(UFFormat(valorUF/totalSquareMeters))
     }
     // Rent prices
@@ -1212,19 +1215,35 @@
     var sumTerraceSquareMeters = 0
     var sumMarketPrice = 0
     var c = 0
-    $('#tableValuationRealEstate tr').each(function() {
-      str = parseFloat($(this).find(".tdUsefulSquareMeters").text());
-      if (!isNaN(str)) {
-        sumUsefulSquareMeters += parseFloat($(this).find(".tdUsefulSquareMeters").text());
-        c += 1
-      }
-      str = parseFloat($(this).find(".tdTerraceSquareMeters").text());
-      if (!isNaN(str)) {
-        sumTerraceSquareMeters += parseFloat($(this).find(".tdTerraceSquareMeters").text());
-      }
-      str = parseFloat($(this).find(".tdMarketPrice").text());
-      if (!isNaN(str)) {
-        sumMarketPrice += parseFloat($(this).find(".tdMarketPrice").text());
+    $('#table_valuation_real_estate tr').each(function() {
+      if ({{realestate.is_apartment}}) {
+        str = parseFloat($(this).find(".tdUsefulSquareMeters").text());
+        if (!isNaN(str)) {
+          sumUsefulSquareMeters += parseFloat($(this).find(".tdUsefulSquareMeters").text());
+          c += 1
+        }
+        str = parseFloat($(this).find(".tdTerraceSquareMeters").text());
+        if (!isNaN(str)) {
+          sumTerraceSquareMeters += parseFloat($(this).find(".tdTerraceSquareMeters").text());
+        }
+        str = parseFloat($(this).find(".tdMarketPrice").text());
+        if (!isNaN(str)) {
+          sumMarketPrice += parseFloat($(this).find(".tdMarketPrice").text());
+        }
+      } else if ({{realestate.is_house}}) {
+        str = parseFloat($(this).find(".tdBuiltSquareMeters").text());
+        if (!isNaN(str)) {
+          sumUsefulSquareMeters += parseFloat($(this).find(".tdBuiltSquareMeters").text());
+          c += 1
+        }
+        str = parseFloat($(this).find(".tdTerrainSquareMeters").text());
+        if (!isNaN(str)) {
+          sumTerraceSquareMeters += parseFloat($(this).find(".tdTerrainSquareMeters").text());
+        }
+        str = parseFloat($(this).find(".tdMarketPrice").text());
+        if (!isNaN(str)) {
+          sumMarketPrice += parseFloat($(this).find(".tdMarketPrice").text());
+        }
       }
     });
     if (c == 0) {
@@ -1664,7 +1683,7 @@
       
       // Create row to be added to valuation real estate list
       var newRow = row.clone();
-      var rowCount = $('#tableValuationRealEstate tr').length-4+1; // minus heading and current, +1 for count
+      var rowCount = $('#table_valuation_real_estate tr').length-4+1; // minus heading and current, +1 for count
       var btn = newRow.find('.add')
       btn.removeClass('add')
       btn.addClass('remove')
@@ -1674,7 +1693,7 @@
       // Input, needed when saving
       var hiddenInput1 = '<input name="valuationRealEstateRow" type="hidden" value="'+rid+'">'
       var hiddenInput2 = '<input name="valuationRealEstateRemove" type="hidden" value="0">'
-      $('#tableValuationRealEstate > tbody > tr').eq(rowCount-1).after('<tr id="trValuationRealEstate_'+rid+'">'+
+      $('#table_valuation_real_estate > tbody > tr').eq(rowCount-1).after('<tr id="trValuationRealEstate_'+rid+'">'+
         hiddenInput1+
         hiddenInput2+
         newRow.html()+'</tr>');
