--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -36,35 +36,41 @@
         </button>
       </div>
       <div class="modal-body">
+        <form action="" method="post" id="form">
+            <table class="table table-sm">
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Tasaciones</th>
+                </tr>
+              </thead>
+              <tbody>
 
-        <table class="table table-sm">
-          <thead class="thead-light">
-            <tr>
-              <th scope="col">Nombre</th>
-              <th scope="col">Tasaciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for user in visadores %}
-            <tr>
-              <th scope="col">
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="visador" id="visador_radio" value="{{user.id}}" checked>
-                  <label class="form-check-label" for="visador_radio">
-                    {{user.first_name}} {{user.last_name}}
-                  </label>
-                </div>
-              </th>
-              <th scope="col">10</th>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button name="btn_assign_visador" class="btn btn-primary">Asignar</button>
-      </div>
+                  {% csrf_token %}
+                {% for user in visadores %}
+                <tr>
+                  <th scope="col">
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="visador" id="visador_radio" value="{{user.id}}" checked>
+                      <label class="form-check-label" for="visador_radio">
+                        {{user.first_name}} {{user.last_name}}
+                      </label>
+                    </div>
+                  </th>
+                  <th scope="col">10</th>
+                </tr>
+                {% endfor %}
+
+              </tbody>
+            </table>
+
+              <div class="modal-footer">
+                  <input id="visadorAppraisal_id" name="visadorAppraisal_id" type="hidden" value="">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button name="btn_assign_visador" class="btn btn-primary">Asignar</button>
+              </div>
+          </form>
+        </div>
     </div>
   </div>
 </div>
@@ -80,7 +86,7 @@
         </button>
       </div>
       <div class="modal-body">
-
+    <form action="" method="post" id="form">
         <table class="table table-sm">
           <thead class="thead-light">
             <tr>
@@ -89,7 +95,7 @@
             </tr>
           </thead>
           <tbody>
-          <form action="" method="post" id="form">
+
               {% csrf_token %}
             {% for user in tasadores %}
             <tr>
@@ -104,19 +110,18 @@
               <th scope="col">10</th>
             </tr>
             {% endfor %}
-            </form>
+
           </tbody>
         </table>
-      </div>
-      <div class="modal-footer">
-          <input id="tasadorAppraisal_id" name="tasadorAppraisal_id" type="hidden" value="">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
-
-
-      </div>
+          <div class="modal-footer">
+              <input id="tasadorAppraisal_id" name="tasadorAppraisal_id" type="hidden" value="">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+              <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
+          </div>
+     </form>
     </div>
   </div>
+</div>
 </div>
 
 <div class="modal fade" id="evaluateAppraisal" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
@@ -129,7 +134,8 @@
         </button>
       </div>
       <div class="modal-body">
-
+       <form action="" method="post" id="form">
+           {% csrf_token %}
         <table class="table table-sm">
           <thead class="thead-light">
             <tr>
@@ -141,7 +147,7 @@
             <tr>
 
              <td>
-             Puntualidad
+             {{evaluationForm.onTime.label}}
               </td>
              <td>
              {{evaluationForm.onTime}}
@@ -150,7 +156,7 @@
 
             <tr>
               <td>
-                 Completitud
+                 {{evaluationForm.completeness.label}}
               </td>
               <td>
                  {{evaluationForm.completeness}}
@@ -159,15 +165,15 @@
 
             <tr>
               <td>
-                 Calidad General
+                 {{evaluationForm.generalQuality.label}}
               </td>
-              <td>
+
                 {{evaluationForm.generalQuality}}
               </td>
             </tr>
             <tr>
               <td>
-                 Comentarios
+                 {{evaluationForm.commentText.label}}
               </td>
               <td>
                 {{evaluationForm.commentText}}
@@ -175,22 +181,24 @@
             </tr>
             <tr>
               <td>
-                 Feedback al Tasador
+                 {{evaluationForm.commentFeedback.label}}
               </td>
               <td>
+
                 {{evaluationForm.commentFeedback}}
               </td>
             </tr>
 
           </tbody>
         </table>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button name="btn_assign_visador" class="btn btn-primary">Evaluar</button>
+        <div class="modal-footer">
+            <input id="evaluadorAppraisal_id" name="evaluadorAppraisal_id" type="hidden" value="">
+            <input id="evaluador_id" name="evaluador_id" type="hidden" value="">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+            <button name="btn_evaluate_appraisal" class="btn btn-primary">Evaluar</button>
+        </div>
+       </form>
       </div>
     </div>
   </div>
 </div>
-
-
